--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
                     <p class="blog-text">
                         Megmutatja a különbségeket a megadott két branch között.
                     </p>
+                    <h6>git merge trial</h6>
+                    <p class="blog-text">
+                        Merge-öli a trial branch-et az aktív branch-re (tehát előtte checkout arra a 
+                        branch-re amelyikre merge-ölni akarunk).
+                    </p>
+                    <h6>git branch -d trial</h6>
+                    <h6>git branch -D trial</h6>
+                    <p class="blog-text">
+                        A trial branch törlésének módjai, a -D kapcsolóval nyomtalanul töröljük 
+                        (ha nem sikerült az azon lévő fejlesztés, és már nincs szükség rá).
+                    </p>
                 </div>
             </div>                               
         </section>
